--- a/laravel/package.json
+++ b/laravel/package.json
@@ -17,7 +17,25 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@fullcalendar/bootstrap": "^5.6.0",
+        "@fullcalendar/core": "^5.6.0",
+        "@fullcalendar/daygrid": "^5.6.0",
+        "@fullcalendar/interaction": "^5.6.0",
+        "@fullcalendar/list": "^5.6.0",
+        "@fullcalendar/moment": "^5.6.0",
+        "@fullcalendar/scrollgrid": "^5.6.0",
+        "@fullcalendar/timegrid": "^5.6.0",
+        "chart.js": "^3.2.1",
+        "daterangepicker": "^3.1.0",
+        "fullcalendar": "^5.6.0",
+        "mdbootstrap": "^4.19.2",
+        "moment": "^2.29.1",
+        "toastr": "^2.1.4"
     }
 }
