--- a/web.config
+++ b/web.config
@@ -5,6 +5,12 @@
 -->
 <configuration>
   <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="index.php" />
+      </files>
+    </defaultDocument>
     <rewrite>
       <rules>
         <rule name="Imported Rule 1" stopProcessing="true">
